--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -277,6 +277,8 @@ The texts of Shakespeare's plays is public domain.<br>Contact linked sites regar
 <!-- end center column -->
 </td>
 
+<!-- begin right column -->
+
 <td align="center" id="right_column">
   <%= render :partial => 'shared/tip_jar.html' %>
 
@@ -285,11 +287,21 @@ The texts of Shakespeare's plays is public domain.<br>Contact linked sites regar
   <p>
 
 
-<a href="http://shakespeareclass.org/Shakespeare_Class/Shakespeare_Class.html" target="_blank"><img src="http://www.shakespeare-monologues.org/images/OSC300x250AdFor2015.2.jpg" border="0" width="300" height="250" alt="Oxford Shakespeare Company" title="Oxford Shakespeare Company" /></a>
+<!-- OSC ad run ended, commented out, hopefully they'll want another run next year. a href="http://shakespeareclass.org/Shakespeare_Class/Shakespeare_Class.html" target="_blank"><img src="http://www.shakespeare-monologues.org/images/OSC300x250AdFor2015.2.jpg" border="0" width="300" height="250" alt="Oxford Shakespeare Company" title="Oxford Shakespeare Company" /></a -->
 
 
-<!-- rightcolgraphic google adsense removed for duration of OSC ad run. Deleted instead of commenting out, because it's easier to copy-paste from adsense than to comment out and remove comments later. Paste it in below the next comment -->
-<!-- rightcol google graphic ad -->
+<!-- begin rightcol google graphic ad -->
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- rightcolgraphic -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-5236095389905910"
+     data-ad-slot="1016396307"></ins>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+<!-- end rightcol google graphic ad -->
 
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- rightcoltext -->
